# claudelator

./: .gitignore  README.md  pyproject.toml
src/claudelator/: cli.py  merge.py
src/claudelator/presets/: aws.json  base.json  browsers.json  gh.json  go.json  keyring.json  minne.json  node.json  uv.json  wsl.json  zaira.json
