[project]
name = "claudelator"
version = "0.1.0"
description = "Apply preset bundles to Claude Code settings.json"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
claudelator = "claudelator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claudelator"]

[tool.hatch.build.targets.wheel.force-include]
"src/claudelator/presets" = "claudelator/presets"
